k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onlyfeed-backend
  labels:
    name: onlyfeed-backend
    app: onlyfeed
