k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyfeed-ingress
  namespace: onlyfeed-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - onlyfeed-backend.fr
      secretName: onlyfeed-tls
  rules:
    - host: onlyfeed-backend.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyfeed-backend-service
                port:
                  number: 8080
